basic setup for league dashboard

--- a/src/views/leagues.handlebars
+++ b/src/views/leagues.handlebars
@@ -1,31 +1,3 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Welcome to the Draft Engine,
-      {{nickname}}</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/research">Research</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
 <div class="container">
   <div class="row vh-100 align-items-center">
     {{#each leagues}}
@@ -43,8 +15,12 @@
           <div class="card-body">
             <h5 class="card-title">{{name}}</h5>
             <p class="card-text">Draft Status: {{draft_status}}</p>
-            <a href="{{league_key}}/dashboard" class="btn btn-primary">Go
-              somewhere</a>
+            <a
+              href="/league/{{league_key}}/dashboard"
+              class="btn btn-primary"
+            >Go to
+              {{name}}
+              dashboard</a>
           </div>
         </div>
       </div>
