--- a/src/views/leagues.handlebars
+++ b/src/views/leagues.handlebars
@@ -1,26 +1,20 @@
 <div class="container">
   <div class="row vh-100 align-items-center">
     {{#each leagues}}
-      <div class="col">
+      <div class="col d-flex justify-content-center">
         <div class="card" style="width: 18rem;">
-          {{#if logo_url}}
-            <img
-              src="{{{logo_url}}}"
-              class="card-img-top"
-              alt="{{name}} logo"
-            />
-          {{else}}
-            <i class="fa-solid fa-user"></i>
-          {{/if}}
+          <img
+            src="{{{team.logoUrl}}}"
+            class="card-img-top"
+            alt="{{team.name}} logo"
+          />
           <div class="card-body">
-            <h5 class="card-title">{{name}}</h5>
-            <p class="card-text">Draft Status: {{draft_status}}</p>
-            <a
-              href="/league/{{league_key}}/dashboard"
-              class="btn btn-primary"
-            >Go to
-              {{name}}
-              dashboard</a>
+            <h5 class="card-title">{{team.name}}</h5>
+            <p class="card-text">League: {{name}}</p>
+            <p class="card-text">Draft Status: {{draftStatus}}</p>
+            <a href="/league/{{leagueKey}}/dashboard" class="btn btn-primary">
+              Go to dashboard
+            </a>
           </div>
         </div>
       </div>
