refactor code related to league page; refactor handlers by moving data extraction to service

--- a/src/views/countdown.handlebars
+++ b/src/views/countdown.handlebars
@@ -1,13 +1,5 @@
 {{> navBar}}
 
-{{#if draftCompleted}}<div class="container">
-  <div class="row vh-100 align-items-center">
-    <div class="col text-center">
-      <h1>Your draft has already completed!</h1>
-    </div>
-  </div>
-</div>
-{{else}}
 <div class="container">
   <div class="row vh-100 align-items-center">
     <div class="col text-center">
@@ -17,5 +9,4 @@
     </div>
   </div>
 </div>
-<script src="/js/dashboard.js"></script>
-{{/if}}
+<script src="/js/countdown.js"></script>
