--- a/src/views/dashboard.handlebars
+++ b/src/views/dashboard.handlebars
@@ -1,68 +1,60 @@
-{{!-- {{> navBar}} --}}
+{{> navBar}}
 
 {{#if countdownString}}
-  <div class="container">
-    <div class="row vh-100 align-items-center">
-      <div class="col text-center">
-        <h1>Your draft will begin in:</h1>
-        <div id="draftTime" data-value="{{draftTime}}"></div>
-        <h2 id="countdown">{{countdownString}}</h2>
-      </div>
+<div class="container">
+  <div class="row vh-100 align-items-center">
+    <div class="col text-center">
+      <h1>Your draft will begin in:</h1>
+      <div id="draftTime" data-value="{{draftTime}}"></div>
+      <h2 id="countdown">{{countdownString}}</h2>
     </div>
   </div>
-  <script src="/js/countdown.js"></script>
+</div>
+<script src="/js/countdown.js"></script>
 {{else}}
-  <div id="leagueKey" data-value="{{leagueKey}}"></div>
-  <div class="container-fluid draft-summary">
-    <div class="row justify-content-center">
-      <div class="card" style="width: 5rem; visibility: hidden;">
-        <div class="card-body">
-        </div>
+<div id="leagueKey" data-value="{{leagueKey}}"></div>
+<div class="container-fluid draft-summary">
+  <div class="row justify-content-center">
+    <div class="card" style="width: 5rem; visibility: hidden;">
+      <div class="card-body">
       </div>
-
-      {{#each teams}}
-        <div class="card" style="width: 6rem;">
-          <img src="{{teamLogo}}" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <p class="card-text">{{teamName}}</p>
-          </div>
-        </div>
-      {{/each}}
     </div>
-    {{#each draftSelections}}
-      <div class="row justify-content-center">
-        {{#each this}}
-          {{#if roundCard}}
-            <div class="card" style="width: 5rem;">
-              <div class="card-body">
-                <p class="card-text">{{roundCard}}</p>
-              </div>
-            </div>
-          {{else}}
-            <div
-              id="pick-{{pick}}"
-              class="card {{position}}"
-              style="width: 6rem;"
-            >
-              <div class="card-header">
-                {{pick}}
-              </div>
-              <div class="card-body">
-                <p class="card-text"><span
-                    class="firstName"
-                  >{{firstName}}</span><br /><span
-                    class="lastName"
-                  >{{lastName}}</span><br /><span
-                    class="position"
-                  >{{position}}</span>
-                  -
-                  <span class="teamAbbr">{{teamAbbr}}</span></p>
-              </div>
-            </div>
-          {{/if}}
-        {{/each}}
+
+    {{#each teams}}
+    <div class="card" style="width: 6rem;">
+      <img src="{{teamLogo}}" class="card-img-top" alt="..." />
+      <div class="card-body">
+        <p class="card-text">{{teamName}}</p>
       </div>
+    </div>
     {{/each}}
   </div>
-  <script src="/js/dashboard.js"></script>
+  {{#each draftSelections}}
+  <div class="row justify-content-center">
+    {{#each this}}
+    {{#if roundCard}}
+    <div class="card" style="width: 5rem;">
+      <div class="card-body">
+        <p class="card-text">{{roundCard}}</p>
+      </div>
+    </div>
+    {{else}}
+    <div id="pick-{{pick}}" class="card {{position}}" style="width: 6rem;">
+      <div class="card-header">
+        {{pick}}
+      </div>
+      <div class="card-body">
+        <p class="card-text"><span class="firstName">{{firstName}}</span><br /><span
+            class="lastName">{{lastName}}</span><br /><span class="position">{{position}}</span>
+          -
+          <span class="teamAbbr">{{teamAbbr}}</span>
+        </p>
+      </div>
+    </div>
+    {{/if}}
+    {{/each}}
+  </div>
+  {{/each}}
+</div>
+<script src="/js/dashboard.js"></script>
 {{/if}}
