--- a/src/views/partials/navBar.handlebars
+++ b/src/views/partials/navBar.handlebars
@@ -11,9 +11,14 @@
           <a class="nav-link" href="/leagues">Leagues</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="/league/{{leagueKey}}/dashboar">Dashboard</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" aria-current="page" href="/league/{{leagueKey}}/big-board">The Big Board</a>
         </li>
       </ul>
+      <span class="navbar-brand mb-0 h1 ms-auto">Current Pick: {{currentPickNum}}</span>
+      <span class="navbar-brand mb-0 h1">{{currentTeamName}}</span>
     </div>
   </div>
 </nav>
