--- a/src/views/dashboard.handlebars
+++ b/src/views/dashboard.handlebars
@@ -1,8 +1,10 @@
 {{> navBar}}
 
 <div id="leagueKey" data-value="{{leagueKey}}"></div>
+<div class="toast-container position-fixed bottom-0 end-0 p-3"></div>
+
 <div class="container-fluid draft-summary">
-  <div class="row justify-content-center">
+  <div class="row justify-content-center" style="padding-right: 16px;">
     <div class="card" style="width: 5rem; visibility: hidden;">
       <div class="card-body">
       </div>
@@ -17,31 +19,35 @@
     </div>
     {{/each}}
   </div>
-  {{#each fullDraftBoard}}
-  <div class="row justify-content-center">
-    {{#each this}}
-    {{#if roundCard}}
-    <div class="card" style="width: 5rem;">
-      <div class="card-body">
-        <p class="card-text">{{roundCard}}</p>
+  <div class="row justify-content-center overflow-y-scroll" style="max-height: 550px;">
+    {{#each fullDraftBoard}}
+    <div class="row justify-content-center">
+      {{#each this}}
+      {{#if roundCard}}
+      <div class="card" style="width: 5rem;">
+        <div class="card-body">
+          <p class="card-text">{{roundCard}}</p>
+        </div>
       </div>
+      {{else}}
+      <div id="pick-{{pick}}" class="card {{position}}" style="width: 6rem;">
+        <div class="card-header">
+          {{pick}}
+        </div>
+        <div class="card-body">
+          <p class="card-text"><span class="firstName">{{firstName}}</span><br /><span
+              class="lastName">{{lastName}}</span><br /><span class="position">{{position}}</span>
+            -
+            <span class="teamAbbr">{{teamAbbr}}</span>
+          </p>
+        </div>
+      </div>
+      {{/if}}
+      {{/each}}
     </div>
-    {{else}}
-    <div id="pick-{{pick}}" class="card {{position}}" style="width: 6rem;">
-      <div class="card-header">
-        {{pick}}
-      </div>
-      <div class="card-body">
-        <p class="card-text"><span class="firstName">{{firstName}}</span><br /><span
-            class="lastName">{{lastName}}</span><br /><span class="position">{{position}}</span>
-          -
-          <span class="teamAbbr">{{teamAbbr}}</span>
-        </p>
-      </div>
-    </div>
-    {{/if}}
     {{/each}}
   </div>
-  {{/each}}
 </div>
-<script src="/js/dashboard.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="/js/dashboard.js" type="module"></script>
