--- a/src/views/bigBoard.handlebars
+++ b/src/views/bigBoard.handlebars
@@ -1,5 +1,6 @@
 {{> navBar league}}
 <div id="leagueKey" data-value="{{league.leagueKey}}"></div>
+<div class="toast-container position-fixed bottom-0 end-0 p-3"></div>
 <div class="container">
   <div class="row">
     <div class="col">
@@ -23,4 +24,6 @@
     </div>
   </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="/js/research.js"></script>
