--- a/src/views/dashboard.handlebars
+++ b/src/views/dashboard.handlebars
@@ -19,7 +19,7 @@
     </div>
     {{/each}}
   </div>
-  <div class="row justify-content-center overflow-y-scroll" style="max-height: 550px;">
+  <div class="row justify-content-center overflow-y-scroll draft-summary-body" style="max-height: 550px;">
     {{#each fullDraftBoard}}
     <div class="row justify-content-center">
       {{#each this}}
